# bellroy-tech-team-haskell-trial

./: .gitignore  CHANGELOG.md  README.md  bellroy-tech-team-haskell-trial.cabal  bellroy-tech-team-haskell-trial.nix  flake.nix  sample-input.jsonl  stack.yaml
app/: Main.hs
appA/: DB.hs  Main.hs
appB/: Main.hs
