cabal-version:      2.4
name:               bellroy-tech-team-haskell-trial
version:            0.1.0.0
synopsis:           Small project to help Bellroy evaluate Haskell developers

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jack Kelly
maintainer:         jack.kelly@bellroy.com

-- A copyright notice.
copyright:          Copyright (C) 2021 Bellroy Pty Ltd
category:           Recruitment, Demo
extra-source-files: CHANGELOG.md

executable tech-team-haskell-trial
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base           ^>=4.14.1.0
    , scotty         ^>=0.12
    , sqlite-simple  ^>=0.4.18.0

  hs-source-dirs:   app
  default-language: Haskell2010
