cabal-version:      2.4
name:               bellroy-tech-team-haskell-trial
version:            0.1.0.0
synopsis:           Small project to help Bellroy evaluate Haskell developers
author:             Jack Kelly
maintainer:         jack.kelly@bellroy.com
copyright:          Copyright (C) 2021 Bellroy Pty Ltd
category:           Recruitment, Demo
extra-source-files: CHANGELOG.md

executable tech-team-haskell-trial
  main-is:          Main.hs
  build-depends:
    , aeson          >=1.5.6.0  && <1.6 || >=2.1.1 && <2.2
    , base           >=4.12     && <4.18
    , bytestring     ^>=0.10.12
    , http-types     ^>=0.12.3
    , scotty         ^>=0.12
    , sqlite-simple  ^>=0.4.18.0
    , text           ^>=1.2.4.1 || ^>=2.0.1
    , transformers   >=0.5.6.2  && <0.7

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite tech-team-haskell-trial-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:  base
