cabal-version:      2.4
name:               bellroy-tech-team-haskell-trial
version:            0.1.0.0
synopsis:           Small project to help Bellroy evaluate Haskell developers
author:             Jack Kelly
maintainer:         jack.kelly@bellroy.com
copyright:          Copyright (C) 2021 Bellroy Pty Ltd
category:           Recruitment, Demo
extra-source-files: CHANGELOG.md

-- This repo does not have CI, so this just reflects what is provided by the dev shell.
tested-with:        GHC ==9.8.4

executable tech-team-haskell-trial-a
  main-is:          Main.hs
  other-modules:    DB
  build-depends:
    , aeson          ^>=2.2
    , base           ^>=4.20
    , http-types     ^>=0.12.3
    , scotty         ^>=0.30
    , sqlite-simple  ^>=0.4.18.0
    , text           ^>=2.1.1
    , transformers   ^>=0.6

  hs-source-dirs:   appA
  default-language: Haskell2010

executable tech-team-haskell-trial-b
  main-is:          Main.hs
  build-depends:
    , aeson          ^>=2.2
    , base           ^>=4.20
    , bytestring     ^>=0.12
    , http-types     ^>=0.12.3
    , scotty         ^>=0.30
    , sqlite-simple  ^>=0.4.18.0
    , text           ^>=2.1.1
    , transformers   ^>=0.6

  hs-source-dirs:   appB
  default-language: Haskell2010

test-suite tech-team-haskell-trial-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    base
  default-language: Haskell2010
